lab/04-helm-rbac-netpol/manifests/netpol-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: platform-lab
spec:
  podSelector: {}
  policyTypes:
    - Ingress
